# rust-k8s

./: Cargo.toml  Dockerfile  Dockerfile_build  Dockerfile_simple  Dockerfile_test  Rocket.toml  docker-compose.yaml
.github/workflows/: ci.yml  ci.yml_old  matrix.yml  rust.yml
deployment/: autoscaler.yaml  helmfile.yaml
deployment/wegift-app/: Chart.yaml  values.yaml
deployment/wegift-app/templates/: NOTES.txt  _helpers.tpl  autoscaler.yaml  deployment.yaml  ingress.yaml  service.yaml
deployment/wegift-app/templates/tests/: test-connection.yaml
migrations/2020-08-14-224223_create_todo_table/: down.sql
migrations/2020-08-17-224223_create_todo_table/: up.sql
src/: main.rs  schema.rs
