# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2

[package]
name = "wegift"
version = "0.1.0"
authors = ["rafaelkonrath <rafael.konrath@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15"

[[bin]]
name = "wegift"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]

[package.metadata.wharf.builder]
image = "clux/muslrust:nightly"
target = "x86_64-unknown-linux-musl"

[package.metadata.wharf.output]
image = "scratch"
workdir = "/"
entrypoint = ["/usr/local/bin/wegift"]

[[package.metadata.wharf.binary]]
name = "wegift"
destination = "/usr/local/bin/wegift"